# comfy-aimdo_win-rocm

./: CONTRIBUTING.md  README.md  build  build-linux-docker  build-rocm-local  build-rocm-local_win.ps1  build-rocm-windows.bat  build.bat  foo.c  foo.cpp  pyproject.toml  setup.py  torch_test.py
.github/: pull_request_template.md
.github/workflows/: build-wheels.yml  wheels.yml
aimdo/: __init__.py  control.py  model_vbar.py
comfy_aimdo/: control.py  model_vbar.py  torch.py
docker/: cuda-on-manylinux.Dockerfile
examples/: example.py
src/: aimdo-memcpy.c  control.c  debug.c  model-vbar.c  plat.h  plat_hip.h  pyt-cu-plug-alloc-async.c  pyt-cu-plug-alloc.c  shmem-detect.c  vrambuf.c  vrambuf.h
src-posix/: cuda-detour.c  torch.c
src-win/: cuda-detour.c  shmem-detect.c  torch.c
src/hip/: detour.c
src/win/: model-rbar.c  shmem-detect.c
win_rocm_patch/: _gen_stubs.py  _make_junction.py  _patch_prereserved.py  _type_replace.ps1  _write_model_vbar.py  build-rocm-windows.bat
