[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-aimdo"
dynamic = ["version"]

[tool.setuptools]
packages = ["comfy_aimdo"]

[tool.setuptools.package-data]
"comfy_aimdo" = ["*.so", "*.dll"]

[tool.setuptools_scm]
version_file = "comfy_aimdo/_version.py"
local_scheme = "no-local-version"
